<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="vertical"
    android:layout_margin="30dp" android:padding="10dp">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_name" android:textSize="24sp"
                android:textStyle="bold"
        android:paddingBottom="30dp"/>
        <TextView
                android:text="@string/description"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_description"/>

        <TextView
                android:text="@string/date_of_upload"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_uploadedAt"/>

        <TextView
                android:text="@string/owner"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_owner"/>


</LinearLayout>