<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:fitsSystemWindows="true"
                                             android:layout_margin="24dp"
android:padding="10dp">


    <EditText android:id="@+id/input_username"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:hint="@string/user_name"
              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@+id/input_password" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintVertical_chainStyle="packed"
              android:textCursorDrawable="@drawable/color_cursor"/>

    <EditText android:id="@+id/input_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/password"
              android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@+id/btn_login"
              app:layout_constraintTop_toBottomOf="@+id/input_username" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
              android:textCursorDrawable="@drawable/color_cursor"
    />

    <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/login" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/link_signup"
            app:layout_constraintTop_toBottomOf="@+id/input_password" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView android:id="@+id/link_signup"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/no_account_yet_create_one"
              android:gravity="center"
              android:textSize="16sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
    />


</android.support.constraint.ConstraintLayout>